--- a/ProblemGeoUSA/GeoUSA.html
+++ b/ProblemGeoUSA/GeoUSA.html
@@ -12,6 +12,11 @@
     svg{
         /*background: #eeeeee;*/
     }
+    
+    .background {
+	  fill: none;
+	  pointer-events: all;
+	}
 
     .country{
         fill: #dffaff;
@@ -54,13 +59,45 @@
     }
 
 
+#states {
+  fill: #aaa;
+}
+
+#states .active {
+  fill: orange;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
+.info_box{
+	position: absolute; 
+	z-index: :10;
+	visibility: hidden;
+	background: rgba(0,0,0,.8);
+    border-radius: 5px;
+    padding:5px;
+	
+	color: white;
+	
+}
 
 </style>
 
-
+<div class="info_box">
+			<p><strong>Station: </strong><span id="name"></span> </p>
+			<p><strong>Sum: </strong><span id="sum"></span> </p>
+			
+</div>
 
 <table>
-    <tr><td><div id="vis"></div></td><td><div id="detailVis"></div></td></tr>
+    <tr><td><div id="vis"></div></td><td><div id="detailVis"><div id="city_name"></div></div></td></tr>
 </table>
 
 
